--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,32 +30,49 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  flutter_markdown: ^0.7.0
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
+  animated_text_kit: ^4.2.2   # latest stable
+  shared_preferences: ^2.2.2
+  cloud_firestore: ^6.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_dotenv: ^5.1.0
+  flutter_gemini: ^3.0.0
+  dash_chat_2: ^0.0.21
+  lottie: ^2.7.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_lints: ^6.0.0
+ 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+flutter:
   uses-material-design: true
+  assets:
+    - assets/animations/loading.json
+
+
+  # assets:
+  #   - assets/profile.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
