--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to show nearby colleges and resources.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to show nearby colleges and resources.</string>
 </dict>
 </plist>
