--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   dash_chat_2: ^0.0.21
   lottie: ^2.7.0
   url_launcher: ^6.0.9
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
