--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   lottie: ^2.7.0
   url_launcher: ^6.0.9
   geolocator: ^10.1.0
+  http: ^1.1.0
+  xml: ^6.6.1
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +73,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/animations/loading.json
+    - assets/animations/pre_quiz.json
+    - assets/animations/data.json
 
 
   # assets:
